# modificable

./: .gitignore  Cargo.toml  README.md
proc_modificable/: Cargo.toml
proc_modificable/src/: modificable_derive.rs
proc_modifications/: Cargo.toml
proc_modifications/src/: lib.rs  modificable_derive.rs
src/: lib.rs  tests.rs
