workspace = { members = ["proc_modifications"] }

[package]
name = "modifications"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", optional = true }
proc_modifications = { path = "proc_modifications" }

[dev-dependencies]
chrono = "0.4.38"
derived = "0.4.2"

[features]
testing = ["proc_modifications/testing"]
modifications_impl = []
chrono = ["dep:chrono"]
modifications_utc = ["modifications_impl", "chrono"]
modifications_local = ["modifications_impl", "chrono"]
